[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project]
name = "pyreachx"
version = "0.1.0"
description = "Python Code Reachability Analyzer"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pre-commit",  # Added this line
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
pyreachx = "pyreachx.cli:main"
